--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,9 +1,11 @@
 :root{
-    --white: #fff;
+    --white: #eee;
     --dark: #555;
     --primary: #4169E1;
     --secondary: #31337a;
+    --contrast: #05cdff;
     --gray: #ccc;
+    --tooDark: #222;
 }
 
 *{
@@ -18,19 +20,16 @@ body{
     font-size: 1rem;
 }
 
-h2{
-    font-family: serif;
-}
-
 .menu{
     background: var(--secondary);
 }
 
 .title{
-    color: var(--primary);
+    color: var(--contrast);
     font-weight: 700;
     margin: 0;
     padding-left: 20px;
+    padding-top: 20px;
 }
 
 .nav-menu{
@@ -56,7 +55,41 @@ h2{
 }
 
 #about{
-    background: var(--primary)
+    background: var(--primary);
+    padding: 20px;
+    color: var(--white);
+    text-align: center;
+    font-size: 1.5rem;
+}
+
+#search{
+    padding: 20px;
+}
+
+#search #add{
+    width: 100px;
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    border: 2px solid;
+    border-radius: 5px;
+    padding: 5px;
+    background: var(--white);
+    cursor: pointer;
+}
+
+#search #add a{
+    text-decoration: none;
+    color: var(--secondary);
+}
+
+#search #add:hover{
+    background: var(--tooDark);
+    color: var(--contrast);
+}
+
+#search #add:hover a{
+    color: var(--contrast);
 }
 
 .cars{
@@ -82,11 +115,14 @@ h2{
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
+    padding: 20px;
 }
 
 .cars .cars-container .car{
     width: 30%;
     margin-bottom: 40px;
+    cursor: pointer;
+    border-radius: 10px;
 }
 
 .cars .jobs-container .car .thumb{
@@ -97,7 +133,7 @@ h2{
 .cars .cars-container .car .thumb img{
     width: 100%;
     vertical-align: top;
-    border-radius: 3px;
+    border-radius: 10px;
 }
 
 .cars .cars-container .car .description{
@@ -110,11 +146,20 @@ h2{
     margin-bottom: 0px;
 }
 
+.cars .cars-container .car:hover .description .name{
+    color: var(--contrast);
+}
+
 .cars .cars-container .car .description .make{
     font-size: 22px;
     color: #01182e;
     margin-top: 5px;
     margin-bottom: 5px;
+}
+
+
+.cars .cars-container .car:hover .description .make{
+    color: var(--white);
 }
 
 .cars .cars-container .car .description .model{
@@ -124,13 +169,79 @@ h2{
     margin-bottom: 10px;
 }
 
+.cars .cars-container .car:hover .description .model{
+    color: var(--white);
+}
+
 .cars .cars-container .car .description .available{
     font-size: 17px;
     color: #636363;
 }
 
+.cars .cars-container .car:hover .description .available{
+    color: var(--white);
+}
+
+.cars .cars-container .car .description .button{
+    display: flex;
+    flex-direction: column;
+    border: 1px solid;
+    border-radius: 5px;
+    background: var(--white);
+    margin: 10px;
+}
+
+.cars .cars-container .car .description .button:hover{
+    background: var(--tooDark);
+    color: var(--contrast);
+}
+
+.cars .cars-container .car .description .button a{
+    padding: 5px 0px;
+    text-decoration: none;
+    color: var(--secondary);
+}
+
+.cars .cars-container .car .description .button:hover a{
+    color: var(--contrast);
+}
+
+.cars .cars-container .car:hover{
+    background: var(--dark);
+    color: var(--white);
+}
+
+/*######Footer######*/
+footer #content{
+    display: block;
+    text-align: center;
+    margin: 0 auto;
+    padding: 20px;
+    color: var(--white);
+    font-size: 1.2rem;
+}
+
+/*######MediaQuery######*/
 @media screen and (max-width: 768px){
     .nav-menu{
         flex-direction: column;
+    }
+    
+    .cars .cars-container{
+        padding: 0px;
+    }
+    
+    .cars .cars-container .car{
+        width: 100%;
+    }
+
+    .cars .cars-container .car .thumb img{
+        width: 300px;
+        display: block;
+        margin: auto;
+    }
+
+    .cars .cars-container .car .description .category{
+        margin: 0 20px;
     }
 }
