--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
     <head>
         <title>CarRentalSystem</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link th:href="@{/css/normalize.css}" href="../static/css/normalize.css" rel="stylesheet">
-        <link th:href="@{/css/styles.css}" href="../static/css/styles.css" rel="stylesheet">
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link th:href="@{/css/normalize.css}" href="../static/css/normalize.css" rel="stylesheet"/>
+        <link th:href="@{/css/main.css}" href="../static/css/main.css" rel="stylesheet"/>
     </head>
     <body>
         <header>
@@ -22,8 +24,8 @@
             Every car you want in one place
         </section>
         <section id="search">
-            <div id="add">
-                <a th:href="@{/add}">Add Car</a>
+            <div id="add" sec:authorize="hasRole('ROLE_ADMIN')">
+                <a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/add}">Add Car</a>
             </div>
         </section>
         <section class="cars">
@@ -32,15 +34,15 @@
                 <div class="cars-container" th:if="${cars != null and !cars.empty}">
                     <div class="car" th:each="car : ${cars}">
                         <div class="thumb">
-                            <img th:with="carName=${car.name}" th:src="@{/img/genericCar.jpg}" src="../static/img/A4.jpg" height="250" alt="Car">
+                            <img th:with="carName=${car.name}" th:src="@{/img/genericCar.jpg}" src="../static/img/A4.jpg" height="250" alt="Car" />
                         </div>
                         <div class="description">
                             <p class="name" th:text="${car.name}">Show name</p>
                             <p class="make" th:text="${car.brand}">Show make</p>
                             <p class="model" th:text="${car.year}">Show model</p>
                             <p class="available" th:text="${car.availability}">Show Availability</p>
-                            <p class="button"><a th:href="@{/edit/} + ${car.idCar}" th:text="Edit"></a></p>
-                            <p class="button"><a th:href="@{/delete(idCar=${car.idCar})}" th:text="Delete"></a></p>
+                            <p sec:authorize="hasRole('ROLE_ADMIN')" class="button"><a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/edit/} + ${car.idCar}" th:text="Edit"></a></p>
+                            <p sec:authorize="hasRole('ROLE_ADMIN')" class="button"><a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/delete(idCar=${car.idCar})}" th:text="Delete"></a></p>
                         </div>
                     </div>
                 </div>
@@ -53,6 +55,11 @@
             <div id="content">
                 Car Rental System All Rights Reserved &copy Raul Resendiz
             </div>
+            <form method="POST" th:action="@{/logout}">
+                <b>User:</b> <span sec:authentication="name">Login user</span>|
+                <b>Roles:</b><span sec:authentication="principal.authorities">Roles</span>|
+                <input type="submit" name="logout" value="logout" onclick="this.parentNode.submit();" />
+            </form>
         </footer>
     </body>
 </html>
