--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,7 +3,7 @@
       xmlns="http://www.w3.org/1999/xhtml"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
     <head>
-        <title>CarRentalSystem</title>
+        <title>TODO supply a title</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link th:href="@{/css/normalize.css}" href="../static/css/normalize.css" rel="stylesheet"/>
@@ -13,17 +13,10 @@
         <header>
             <div class="menu">
                 <h1 class="title">Car Rental System</h1>
-                <div class="user_info">
-                    <form method="POST" th:action="@{/logout}" id="username">
-                        <b>Welcome:</b> <span sec:authentication="name">Login user</span>
-                        <!--<b>Roles:</b><span sec:authentication="principal.authorities">Roles</span>|-->
-                        <input type="submit" name="logout" value="logout" onclick="this.parentNode.submit();" />
-                    </form>
-                </div>
                 <div class="clearfix"></div>
                 <nav class="nav-menu container">
-                    <a>Login</a>
-                    <a>Search</a>
+                    <a th:href="@{/login}">Log in</a>
+                    <a th:href="@{/register}">Register</a>
                     <a>Gallery</a>
                 </nav>
             </div>
@@ -33,18 +26,13 @@
                 Every car you want in one place
             </h2>            
         </section>
-        <section id="search">
-            <div id="add" sec:authorize="hasRole('ROLE_ADMIN')">
-                <a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/add}">Add Car</a>
-            </div>
-        </section>
         <section class="cars">
             <div class="container">
                 <h2 class="subtitle">Available cars:</h2>
                 <div class="cars-container" th:if="${cars != null and !cars.empty}">
                     <div class="car" th:each="car : ${cars}">
                         <div class="thumb">
-                            <img th:with="carName=${car.name}" th:src="@{/img/genericCar.jpg}" src="../static/img/A4.jpg" height="250" alt="Car" />
+                            <img th:with="carName=${car.name}" th:src="@{/img/genericCar.jpg}" src="../static/img/genericCar.jpg" height="250" alt="Car" />
                         </div>
                         <div class="description">
                             <p class="name" th:text="${car.name}">Show name</p>
@@ -52,8 +40,6 @@
                             <p class="model" th:text="${car.year}">Show model</p>
                             <p class="available" th:if='${car.availability == "true"}'>Available</p>
                             <p class="unavailable" th:if='${car.availability == "false"}'>Unavailable</p>
-                            <p sec:authorize="hasRole('ROLE_ADMIN')" class="button"><a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/edit/} + ${car.idCar}" th:text="Edit"></a></p>
-                            <p sec:authorize="hasRole('ROLE_ADMIN')" class="button"><a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/delete(idCar=${car.idCar})}" th:text="Delete"></a></p>
                         </div>
                     </div>
                 </div>
