User registration edit

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -16,7 +16,7 @@
                 <div class="clearfix"></div>
                 <nav class="nav-menu container">
                     <a th:href="@{/login}">Log in</a>
-                    <a th:href="@{/register}">Register</a>
+                    <a th:href="@{/logup}">Register</a>
                     <a>Gallery</a>
                 </nav>
             </div>
