--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -5,8 +5,8 @@
         <title>TODO supply a title</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link th:href="@{/css/normalize.css}" href="../static/css/normalize.css" rel="stylesheet"/>
-        <link th:href="@{/css/register_style.css}" href="../static/css/register_style.css" rel="stylesheet"/>
+        <!--<link th:href="@{/css/normalize.css}" href="../static/css/normalize.css" rel="stylesheet"/>
+        <link th:href="@{/css/register_style.css}" href="../static/css/register_style.css" rel="stylesheet"/>-->
     </head>
     <body>
         <h1>Register</h1>
@@ -14,48 +14,21 @@
             <a th:href="@{/home}">Return</a>
         </div>
         <br/>
-        <!--<section class="modify">
-            <div class="container">
-                <form class="edit-form" th:action="@{/saveUsername}" method="POST" th:object="${user}">
-                    <input type="hidden" name="idUser" th:field="*{idUser}" />
-                    <label for="username">Username:</label>
-                    <input type="text" name="username" th:field="*{username}" />
-                    <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Error username</span>
-                    <label for="password">Password:</label>
-                    <input type="password" name="password" th:field="*{password}" />
-                    <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Error password</span>
-                    <input type="submit" name="saveUser" value="save" />
-                </form>
+        <div class="register">
+            <div>
+                <h1>User Registration - Sign Up</h1>
             </div>
-        </section>-->
-        <div class="container text-center">
-		<div>
-			<h1>User Registration - Sign Up</h1>
-		</div>
-		<form th:action="@{/process_register}" th:object="${user}" 
-			method="post" style="max-width: 600px; margin: 0 auto;">
-		<div class="m-3">
-                    
-                        <div class="form-group row">
-				<label class="col-4 col-form-label">Username: </label>
-				<div class="col-8">
-					<input type="text" th:field="*{username}" class="form-control" />
-				</div>
-			</div>
-			
-			<div class="form-group row">
-				<label class="col-4 col-form-label">Password: </label>
-				<div class="col-8">
-					<input type="password" th:field="*{password}" class="form-control"/>
-				</div>
-			</div>
-			
-			<div>
-				<button type="submit" class="btn btn-primary">Sign Up</button> 
-			</div>
-		</div>
-		</form>
-	</div>
+            <form th:action="@{/process_register}" method="POST" th:object="${cUser}">
+                <input type="hidden" name="idUser" th:field="*{idUser}" />
+                <label class="username">Username: </label>
+                <input type="text" name="username" th:field="*{username}" />
+                <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Error username</span>
+                <label class="password">Password: </label>
+                <input type="password" name="password" th:field="*{password}" />
+                <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Error password</span>
+                <input type="submit" name="process_register" value="register" />
+            </form>
+        </div>
         <footer>
             <div id="content">
                 Car Rental System &copy All Rights Reserved Raul Resendiz
