--- a/src/main/resources/templates/register_success.html
+++ b/src/main/resources/templates/register_success.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-	<meta charset="ISO-8859-1">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+    <head>
 	<title>Registration Success</title>
+        <meta charset="UTF-8" />
 </head>
 <body>
-	<div class="container text-center">
+	<div class="message">
 		<h3>You have signed up successfully!</h3>
 		<h4><a th:href="@{/login}">Click here to Login</a></h4>
 	</div>
