--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
         <h1 class="title">Car Rental System</h1>
         <div class="clearfix"></div>
         <section class="log">
-            <h2>Login</h2>
+            <h2>Log In</h2>
             <form method="POST" th:action="@{/login}">
                 <label for="username">Username:</label>
                 <input type="text" name="username" id="username"/>
