--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -113,8 +113,8 @@ body{
     letter-spacing: 2px;
     margin: 0px auto;
     margin-top: 27px;
-    margin-right: 5px;
-    animation: showText 5s linear;
+    margin-right: -30px;
+    animation: showText 3s linear;
 }
 
 @keyframes showText{
@@ -161,11 +161,13 @@ body{
 }
 
 /*######INFO######*/
-#search{
+#search #add{
+    display: flex;
+    justify-content: space-around;
     padding: 20px;
 }
 
-#search #add{
+#search #add p{
     width: 100px;
     display: block;
     margin: 0 auto;
@@ -177,18 +179,63 @@ body{
     cursor: pointer;
 }
 
-#search #add a{
+#search #add p a{
     text-decoration: none;
     color: var(--secondary);
     transition: all 200ms;
 }
 
-#search #add:hover{
+#search #add p:hover{
     background: var(--tooDark);
     color: var(--contrast);
 }
 
-#search #add:hover a{
+#search #add p:hover a{
+    color: var(--contrast);
+}
+
+#search #ordering{
+    background: var(--secondary);
+    margin: 0;
+    padding: 20px;
+}
+
+#search #ordering h3{
+    font-size: 25px;
+    text-align: center;
+    font-weight: 500;
+    color: var(--contrast);
+}
+
+#search #ordering #links{
+    display: flex;
+    justify-content: space-around;
+}
+
+#search #ordering #links p{
+    width: 100px;
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    border: 2px solid;
+    border-radius: 5px;
+    padding: 5px;
+    background: var(--white);
+    cursor: pointer;
+}
+
+#search #ordering #links p a{
+    text-decoration: none;
+    color: var(--secondary);
+    transition: all 200ms;
+}
+
+#search #ordering #links p:hover {
+    background: var(--tooDark);
+    color: var(--contrast);
+}
+
+#search #ordering #links p:hover a{
     color: var(--contrast);
 }
 
@@ -330,6 +377,43 @@ body{
     color: var(--white);
 }
 
+.numbers-container{
+    display: flex;
+    justify-content: space-around;
+    background: var(--secondary);
+    padding: 20px;
+}
+
+.numbers-container .cars-num{
+    color: var(--contrast);
+    font-size: 20px;
+}
+
+.numbers-container .numbers a{
+    text-decoration: none;
+    color: var(--white);
+}
+
+.numbers-container .next a{
+    text-decoration: none;
+    color: var(--white);
+}
+
+.numbers-container .next span{
+    color: transparent;
+    cursor: none;
+}
+
+.numbers-container .last a{
+    text-decoration: none;
+    color: var(--white);
+}
+
+.numbers-container .last span{
+    color: transparent;
+    cursor: none;
+}
+
 /*######Footer######*/
 footer #content{
     display: block;
@@ -340,8 +424,17 @@ footer #content{
     font-size: 1.2rem;
 }
 
+footer #content a{
+    text-decoration: none;
+    color: var(--contrast);
+}
+
 /*######MediaQuery######*/
 @media screen and (max-width: 768px){
+    #banner h2{
+        font-size: 26.2px;
+    }
+    
     .nav-menu{
         flex-direction: column;
     }
