--- a/src/main/resources/static/css/reservation_info_style.css
+++ b/src/main/resources/static/css/reservation_info_style.css
@@ -25,6 +25,13 @@ body{
     font-size: 1rem;
 }
 
+.sorry{
+    color: var(--primary);
+    text-align: center;
+    font-size: 27px;
+    padding: 30px;
+}
+
 .title{
     margin: 0;
     padding: 20px;
@@ -39,75 +46,44 @@ body{
     clear: both;
 }
 
-.modify{
+/*######Description######*/
+
+.Details{
     background: var(--white);
     background-image: url(../img/paven.png);
     padding: 20px;
 }
 
-.modify h2{
+.Details h2{
     color: var(--primary);
     font-size: 35px;
     text-align: center;
 }
 
-.modify .container{
+.Details .reservation-container{
     border: 2px solid;
     color: var(--primary);
-    border-radius: 5px;
+    border-radius: 15px;
     padding: 20px;
 }
 
-.modify .container .reservation-form{
-    text-align: center;
-}
-.modify .container .reservation-form h3{
-    font-size: 27px;
-}
-
-
-.modify .container .reservation-form span{
+.Details .reservation-container .thumb img{
     display: block;
-    padding: 0px 0px;
+    margin: 0 auto;
+    border-radius: 15px;
+}
+
+.Details .reservation-container .description{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.Details .reservation-container .description p{
     font-size: 25px;
+    color: var(--dark);
 }
 
-.modify .container .reservation-form label{
-    padding: 0px 0px;
-    font-size: 25px;
-}
-
-.modify .container .reservation-form input{
-    display: block;
-    margin: 0px auto;
-    border-radius: 5px;
-}
-
-.modify .container .reservation-form input[type="submit"]{
-    border: 2px solid;
-    border-radius: 5px;
-    cursor: pointer;
-    color: var(--secondary);
-    transition: all 200ms;
-    padding: 10px;
-}
-
-.modify .container .reservation-form input[type="text"]{
-    font-size: 20px;
-    display: block;
-    padding: 6px;
-    border-radius: 2px;
-    border: 1px solid #ccc;
-    width: 30%;
-    box-shadow: 0px 0px 5px black;
-    margin-top: 10px;
-    margin-bottom: 20px;
-}
-
-.modify .container .reservation-form input[type="submit"]:hover{
-    background: var(--tooDark);
-    color: var(--contrast);
-}
 
 /*######BANNER######*/
 #banner{
@@ -192,7 +168,8 @@ footer #content a{
 }
 
 @media screen and (max-width: 800px){
-    .modify .container .reservation-form input[type="text"]{
-        width: 70%;
+    .Details .reservation-container .description p{
+        font-size: 15px;
+        color: var(--dark);
     }
 }
