--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,13 +6,16 @@
         <title>CarRentalSystem</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" th:href="@{/webjars/font-awesome/css/all.css}"/>
         <link th:href="@{/css/normalize.css}" href="../static/css/normalize.css" rel="stylesheet"/>
         <link th:href="@{/css/main.css}" href="../static/css/main.css" rel="stylesheet"/>
+        <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+        <script type="text/javascript" th:src="@{/js/index.js}"></script>
     </head>
     <body>
         <header>
             <div class="menu">
-                <h1 class="title">Car Rental System</h1>
+                <h1 class="title">Car Rental System <i class="fas fa-car"></i></h1>
                 <div class="user_info">
                     <form method="POST" th:action="@{/logout}" id="username">
                         <b>Welcome:</b> <span sec:authentication="name">Login user</span>
@@ -22,9 +25,9 @@
                 </div>
                 <div class="clearfix"></div>
                 <nav class="nav-menu container">
-                    <a>Reservation</a>
-                    <a>Search</a>
-                    <a>Gallery</a>
+                    <a th:href="@{/checkReservation}">Reservation</a>
+                    <a id="search">Search</a>
+                    <a id="gallery">Gallery</a>
                 </nav>
             </div>
         </header>
@@ -35,14 +38,23 @@
         </section>
         <section id="search">
             <div id="add" sec:authorize="hasRole('ROLE_ADMIN')">
-                <a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/add}">Add Car</a>
+                <p><a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/add}">Add Car <i class="fas fa-plus-circle"></i></a></p>
+            </div>
+            <div id="ordering">
+                <h3>Select the ordering field Ascending/Descending</h3>
+                <div id="links">
+                    <p><a th:href="@{'/page/' + ${currentPage} + '?sortField=name&sortDir=' + ${reverseSortDir}}">Car name</a></p>
+                    <p><a th:href="@{'/page/' + ${currentPage} + '?sortField=brand&sortDir=' + ${reverseSortDir}}">Car make</a></p>
+                    <p><a th:href="@{'/page/' + ${currentPage} + '?sortField=year&sortDir=' + ${reverseSortDir}}">Car year</a></p>
+                    <p><a th:href="@{'/page/' + ${currentPage} + '?sortField=price&sortDir=' + ${reverseSortDir}}">Car price</a></p>
+                </div>
             </div>
         </section>
         <section class="cars">
             <div class="container">
                 <h2 class="subtitle">Available cars:</h2>
-                <div class="cars-container" th:if="${cars != null and !cars.empty}">
-                    <div class="car" th:each="car : ${cars}">
+                <div class="cars-container" th:if="${listCars != null and !listCars.empty}">
+                    <div class="car" th:each="car : ${listCars}">
                         <div class="thumb">
                             <img th:with="carName=${car.name}" th:src="@{/img/genericCar.jpg}" src="../static/img/A4.jpg" height="250" alt="Car" />
                         </div>
@@ -53,20 +65,41 @@
                             <p class="available" th:if='${car.availability == "true"}'>Available</p>
                             <p class="unavailable" th:if='${car.availability == "false"}'>Unavailable</p>
                             <p class="price" th:text="'$'+${car.price}">Show price</p>
-                            <p sec:authorize="hasRole('ROLE_ADMIN')" class="button"><a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/edit/} + ${car.idCar}" th:text="Edit"></a></p>
-                            <p sec:authorize="hasRole('ROLE_ADMIN')" class="button"><a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/delete(idCar=${car.idCar})}" th:text="Delete"></a></p>
-                            <p sec:authorize="hasRole('ROLE_USER')" class="button"><a sec:authorize="hasRole('ROLE_USER')" th:href="@{/bookCar/} + ${car.idCar}" th:text="Book"></a></p>
+                            <p sec:authorize="hasRole('ROLE_ADMIN')" class="button"><a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/edit/} + ${car.idCar}">Edit <i class="fas fa-edit"></i></a></p>
+                            <p sec:authorize="hasRole('ROLE_ADMIN')" class="button"><a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/delete(idCar=${car.idCar})}">Delete <i class="fas fa-trash-alt"></i></a></p>
+                            <p sec:authorize="hasRole('ROLE_USER')" class="button" th:if='${car.availability == "true"}'><a sec:authorize="hasRole('ROLE_USER')" th:href="@{/bookCar/} + ${car.idCar}">Book <i class="fas fa-book"></i></a></p>
                         </div>
                     </div>
                 </div>
-                <div th:if="${cars == null or cars.empty}">
+                <div th:if="${listCars == null or listCars.empty}">
                     The car's list is empty
                 </div>
             </div>
         </section>
+        <div th:if = "${totalPages > 1}">
+            <div class="numbers-container">
+                <div class="cars-num">
+                    Total cars: [[${totalItems}]]
+                </div>
+                <div class="numbers">
+                    <span th:each="i: ${#numbers.sequence(1, totalPages)}">
+                        <a th:if="${currentPage != i}" th:href="@{'/page/' + ${i}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">[[${i}]]</a>
+                        <span th:unless="${currentPage != i}">[[${i}]]</span> &nbsp; &nbsp;
+                    </span>
+                </div>
+                <div class="next">
+                    <a th:if="${currentPage < totalPages}" th:href="@{'/page/' + ${currentPage + 1}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Next</a>
+                    <span th:unless="${currentPage < totalPages}">Next</span>
+                </div>
+                <div class="last">
+                    <a th:if="${currentPage < totalPages}" th:href="@{'/page/' + ${totalPages}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Last</a>
+                    <span th:unless="${currentPage < totalPages}">Last</span>
+                </div>
+            </div>
+        </div>
         <footer>
             <div id="content">
-                Car Rental System &copy All Rights Reserved Raul Resendiz
+                Car Rental System &copy All Rights Reserved <a th:href="@{https://rresendizlazaro.github.io/raulresendiz/index.html}">Raul Resendiz</a>
             </div>
         </footer>
     </body>
