--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,28 +5,34 @@
         <title>Login</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <link rel="stylesheet" th:href="@{/webjars/font-awesome/css/all.css}"/>
         <link th:href="@{/css/normalize.css}" href="../static/css/normalize.css" rel="stylesheet"/>
         <link th:href="@{/css/login_style.css}" href="../static/css/login_style.css" rel="stylesheet"/>
     </head>
     <body>
-        <h1 class="title">Car Rental System</h1>
+        <h1 class="title">Car Rental System <i class="fas fa-car"></i></h1>
         <div class="clearfix"></div>
         <section class="log">
-            <h2>Log In</h2>
+            <section id="banner">
+                <h2>
+                    Powered by Spring Security
+                </h2>            
+            </section>
+            <h2>Log In <i class="fas fa-sign-in-alt"></i></h2>
             <form method="POST" th:action="@{/login}">
                 <label for="username">Username:</label>
                 <input type="text" name="username" id="username"/>
                 <label for="password">Password:</label>
                 <input type="password" name="password" id="password"/>
-                <input type="submit" value="Login" />
+                <input type="submit" value="Log in" />
             </form>
         </section>
         <div class="menu">
-            <p class="button"><a th:href="@{/home}">Home</a></p>
+            <p class="button"><a th:href="@{/home}">Home <i class="fas fa-home"></i></a></p>
         </div>
         <footer>
             <div id="content">
-                Car Rental System &copy All Rights Reserved Raul Resendiz
+                Car Rental System &copy All Rights Reserved <a th:href="@{https://rresendizlazaro.github.io/raulresendiz/index.html}">Raul Resendiz</a>
             </div>
         </footer>
     </body>
