--- a/src/main/resources/templates/modify.html
+++ b/src/main/resources/templates/modify.html
@@ -5,40 +5,45 @@
         <title>Car Data</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" th:href="@{/webjars/font-awesome/css/all.css}"/>
         <link th:href="@{/css/normalize.css}" href="../static/css/normalize.css" rel="stylesheet"/>
-        <link th:href="@{/css/modify_style.css}" href="../static/css/modify_style.css" rel="stylesheet"/>
+        <link th:href="@{/css/login_style.css}" href="../static/css/login_style.css" rel="stylesheet"/>
     </head>
     <body>
-        <h1>Car Data</h1>
-        <div id="return">
-            <a th:href="@{/}">Return</a>
-        </div>
-        <br/>
-        <section class="modify">
-            <div class="container">
-                <form class="edit-form" th:action="@{/save}" method="POST" th:object="${car}">
-                    <input type="hidden" name="idCar" th:field="*{idCar}" />
-                    <label for="name">Name:</label>
-                    <input type="text" name="name" th:field="*{name}" />
-                    <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Error name</span>
-                    <label for="brand">Make:</label>
-                    <input type="text" name="brand" th:field="*{brand}" />
-                    <span th:if="${#fields.hasErrors('brand')}" th:errors="*{brand}">Error make</span>
-                    <label for="year">Model:</label>
-                    <input type="text" name="year" th:field="*{year}" />
-                    <span th:if="${#fields.hasErrors('year')}" th:errors="*{year}">Error year</span>
-                    <label for="availability">Available:</label>
-                    <input type="text" name="availability" th:field="*{availability}" />
-                    <span th:if="${#fields.hasErrors('availability')}" th:errors="*{availability}">Error name</span>
-                    <input type="text" name="price" th:field="*{price}" />
-                    <span th:if="${#fields.hasErrors('price')}" th:errors="*{price}">Error price</span>
-                    <input type="submit" name="save" value="save" />
-                </form>
-            </div>
+        <h1 class="title">Car Rental System <i class="fas fa-car"></i></h1>
+        <div class="clearfix"></div>
+        <section class="log">
+            <h2>Car Data</h2>
+            <form class="edit-form" th:action="@{/save}" method="POST" th:object="${car}">
+                <input type="hidden" name="idCar" th:field="*{idCar}" />
+                <label for="name">Name:</label>
+                <input type="text" name="name" th:field="*{name}" />
+                <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Error name</span>
+                <label for="brand">Make:</label>
+                <input type="text" name="brand" th:field="*{brand}" />
+                <span th:if="${#fields.hasErrors('brand')}" th:errors="*{brand}">Error make</span>
+                <label for="year">Model:</label>
+                <input type="number" name="year" th:field="*{year}" />
+                <span th:if="${#fields.hasErrors('year')}" th:errors="*{year}">Error year</span>
+                <label for="availability">Available:</label>
+                <select name="availability" th:field="*{availability}">
+                    <option value="true">Available</option>
+                    <option value="false">Unavailable</option>
+                </select>
+                <!--<input type="text" name="availability" th:field="*{availability}" />-->
+                <span th:if="${#fields.hasErrors('availability')}" th:errors="*{availability}">Error name</span>
+                <label for="price">Price:</label>
+                <input type="number" name="price" th:field="*{price}" />
+                <span th:if="${#fields.hasErrors('price')}" th:errors="*{price}">Error price</span>
+                <input type="submit" name="save" value="save" />
+            </form>
         </section>
+        <div class="menu">
+            <p class="button"><a th:href="@{/}">Return <i class="fas fa-home"></i></a></p>
+        </div>
         <footer>
             <div id="content">
-                Car Rental System &copy All Rights Reserved Raul Resendiz
+                Car Rental System &copy All Rights Reserved <a th:href="@{https://rresendizlazaro.github.io/raulresendiz/index.html}">Raul Resendiz</a>
             </div>
         </footer>
     </body>
